fixed styles, hopefully it wont be broken on a mac anymore lol

--- a/projects/style.css
+++ b/projects/style.css
@@ -12,6 +12,7 @@
     font-size: 15px;
     margin: 0;
     scroll-behavior: smooth;
+    zoom: 0.99;
 }
 
 body {
@@ -149,7 +150,7 @@ a {
 }
 
 .card .image {
-    width: 496px;
+    width: 100%;
     height: 285px;
     overflow: hidden;
     flex-shrink: 0;
