--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     font-family: "Poppins";
     font-size: 15px;
     margin: 0;
+    zoom: 0.99;
 }
 
 body {
